--- a/environment.yml
+++ b/environment.yml
@@ -1,140 +1,117 @@
-name: DeepProtFunc
+name: lucaprot
 channels:
-  - pytorch
-  - nvidia
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
-  - appdirs=1.4.4=pyhd3eb1b0_0
-  - blas=1.0=mkl
-  - brotlipy=0.7.0=py39h27cfd23_1003
-  - bzip2=1.0.8=h7b6447c_0
   - ca-certificates=2023.01.10=h06a4308_0
-  - certifi=2022.12.7=py39h06a4308_0
-  - cffi=1.15.1=py39h74dc2b5_0
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - cryptography=38.0.4=py39h9ce1e76_0
-  - cudatoolkit=11.3.1=ha36c431_9
-  - ffmpeg=4.3=hf484d3e_0
-  - flit-core=3.6.0=pyhd3eb1b0_0
-  - freetype=2.12.1=h4a9f257_0
-  - giflib=5.2.1=h5eee18b_1
-  - gmp=6.2.1=h295c915_3
-  - gnutls=3.6.15=he1e5248_0
-  - idna=3.4=py39h06a4308_0
-  - intel-openmp=2021.4.0=h06a4308_3561
-  - jpeg=9e=h7f8727e_0
-  - lame=3.100=h7b6447c_0
-  - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
-  - lerc=3.0=h295c915_0
-  - libdeflate=1.8=h7f8727e_5
   - libffi=3.3=he6710b0_2
   - libgcc-ng=11.2.0=h1234567_1
-  - libgfortran-ng=11.2.0=h00389a5_1
-  - libgfortran5=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
-  - libiconv=1.16=h7f8727e_2
-  - libidn2=2.3.2=h7f8727e_0
-  - libpng=1.6.37=hbc83047_0
   - libstdcxx-ng=11.2.0=h1234567_1
-  - libtasn1=4.16.0=h27cfd23_0
-  - libtiff=4.5.0=hecacb30_0
-  - libunistring=0.9.10=h27cfd23_0
-  - libwebp=1.2.4=h11a3e52_0
-  - libwebp-base=1.2.4=h5eee18b_0
-  - lightgbm=3.3.5=py39h6a678d5_0
-  - lz4-c=1.9.4=h6a678d5_0
-  - mkl=2021.4.0=h06a4308_640
-  - mkl-service=2.4.0=py39h7f8727e_0
-  - mkl_fft=1.3.1=py39hd3c417c_0
-  - mkl_random=1.2.2=py39h51133e4_0
   - ncurses=6.4=h6a678d5_0
-  - nettle=3.7.3=hbbd107a_1
-  - numpy=1.23.5=py39h14f4228_0
-  - numpy-base=1.23.5=py39h31eccc5_0
-  - openh264=2.1.1=h4ff587b_0
   - openssl=1.1.1t=h7f8727e_0
-  - packaging=23.0=py39h06a4308_0
-  - pillow=9.3.0=py39hace64e9_1
-  - pip=22.3.1=py39h06a4308_0
-  - pooch=1.4.0=pyhd3eb1b0_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pyopenssl=22.0.0=pyhd3eb1b0_0
-  - pysocks=1.7.1=py39h06a4308_0
+  - pip=23.0.1=py39h06a4308_0
   - python=3.9.13=haa1d7c7_2
-  - pytorch=1.12.1=py3.9_cuda11.3_cudnn8.3.2_0
-  - pytorch-mutex=1.0=cuda
   - readline=8.2=h5eee18b_0
-  - requests=2.28.1=py39h06a4308_0
-  - scikit-learn=1.2.1=py39h6a678d5_0
-  - setuptools=65.6.3=py39h06a4308_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - sqlite=3.40.1=h5082296_0
+  - setuptools=66.0.0=py39h06a4308_0
+  - sqlite=3.41.2=h5eee18b_0
   - tk=8.6.12=h1ccaba5_0
-  - torchaudio=0.12.1=py39_cu113
-  - torchvision=0.13.1=py39_cu113
-  - typing_extensions=4.4.0=py39h06a4308_0
-  - tzdata=2022g=h04d1e81_0
-  - urllib3=1.26.14=py39h06a4308_0
-  - wheel=0.37.1=pyhd3eb1b0_0
+  - tzdata=2023c=h04d1e81_0
+  - wheel=0.38.4=py39h06a4308_0
   - xz=5.2.10=h5eee18b_1
   - zlib=1.2.13=h5eee18b_0
-  - zstd=1.5.2=ha4553b6_0
   - pip:
       - absl-py==1.4.0
+      - aiohttp==3.8.4
+      - aiosignal==1.3.1
+      - antlr4-python3-runtime==4.9.3
       - astunparse==1.6.3
+      - async-timeout==4.0.2
+      - attrs==23.1.0
+      - beautifulsoup4==4.11.1
       - biopython==1.80
       - biotite==0.35.0
+      - brotlipy==0.7.0
       - cachetools==5.3.0
+      - certifi==2022.12.7
+      - cffi==1.15.1
+      - chardet==3.0.4
+      - charset-normalizer==3.1.0
+      - contextlib2==21.6.0
       - contourpy==1.0.7
       - crc32c==2.3.post0
       - cycler==0.11.0
-      - filelock==3.9.0
-      - flatbuffers==23.1.21
-      - fonttools==4.38.0
+      - deepspeed==0.5.9
+      - dllogger==1.0.0
+      - dm-tree==0.1.8
+      - einops==0.6.1
+      - fair-esm==2.0.0
+      - filelock==3.12.0
+      - flatbuffers==23.3.3
+      - fonttools==4.39.3
+      - frozenlist==1.3.3
+      - fsspec==2023.4.0
       - gast==0.4.0
       - gemmi==0.5.8
-      - google-auth==2.16.0
+      - google-auth==2.17.3
       - google-auth-oauthlib==0.4.6
       - google-pasta==0.2.0
-      - grpcio==1.51.1
+      - grpcio==1.54.0
       - h5py==3.8.0
+      - hjson==3.1.0
       - huggingface-hub==0.12.0
-      - importlib-metadata==6.0.0
-      - interchange==2021.0.4
+      - idna==2.10
+      - importlib-metadata==6.6.0
       - joblib==1.2.0
       - keras==2.11.0
       - kiwisolver==1.4.4
-      - libclang==15.0.6.1
-      - markdown==3.4.1
+      - libclang==16.0.0
+      - lightgbm==3.3.5
+      - lightning-utilities==0.8.0
+      - markdown==3.4.3
       - markupsafe==2.1.2
       - matplotlib==3.6.3
-      - mock==5.0.1
-      - monotonic==1.6
-      - msgpack==1.0.4
+      - ml-collections==0.1.1
+      - mock==5.0.2
+      - msgpack==1.0.5
+      - multidict==6.0.4
       - networkx==3.0
+      - ninja==1.11.1
+      - numpy==1.24.2
+      - nvidia-cublas-cu11==11.10.3.66
+      - nvidia-cuda-nvrtc-cu11==11.7.99
+      - nvidia-cuda-runtime-cu11==11.7.99
+      - nvidia-cudnn-cu11==8.5.0.96
       - oauthlib==3.2.2
       - obonet==0.3.1
+      - omegaconf==2.3.0
       - opt-einsum==3.3.0
+      - packaging==23.1
       - pandas==1.5.3
-      - pansi==2020.7.3
       - pickle5==0.0.11
+      - pillow==9.3.0
       - protobuf==3.19.6
-      - py2neo==2021.2.3
-      - pyasn1==0.4.8
-      - pyasn1-modules==0.2.8
-      - pygments==2.14.0
+      - psutil==5.9.5
+      - py-cpuinfo==9.0.0
+      - pyasn1==0.5.0
+      - pyasn1-modules==0.3.0
+      - pycparser==2.21
       - pyparsing==3.0.9
       - python-dateutil==2.8.2
-      - pytz==2022.7.1
+      - pytorch-lightning==2.0.2
+      - pytz==2023.3
       - pyyaml==6.0
-      - regex==2022.10.31
+      - regex==2023.3.23
+      - requests==2.24.0
       - requests-oauthlib==1.3.1
       - rsa==4.9
+      - scikit-learn==1.2.1
       - scipy==1.10.1
       - seaborn==0.12.2
+      - six==1.16.0
+      - soupsieve==2.4.1
       - subword-nmt==0.3.8
       - tensorboard==2.11.2
       - tensorboard-data-server==0.6.1
@@ -142,15 +119,23 @@ dependencies:
       - tensorboardx==2.5.1
       - tensorflow==2.11.0
       - tensorflow-estimator==2.11.0
-      - tensorflow-io-gcs-filesystem==0.30.0
-      - termcolor==2.2.0
+      - tensorflow-io-gcs-filesystem==0.32.0
+      - termcolor==2.3.0
       - tfrecord==1.14.1
       - threadpoolctl==3.1.0
       - tokenizers==0.13.2
+      - torch==1.13.1
+      - torchaudio==0.13.1
+      - torchmetrics==0.11.4
+      - torchvision==0.14.1
       - tqdm==4.64.1
       - transformers==4.26.0
+      - triton==1.0.0
+      - typing-extensions==4.5.0
+      - urllib3==1.25.11
       - werkzeug==2.2.2
       - wget==3.2
       - wrapt==1.14.1
       - xgboost==1.7.3
+      - yarl==1.9.1
       - zipp==3.12.0
