--- a/requirements_simple.txt
+++ b/requirements_simple.txt
@@ -1,24 +1,39 @@
-subword-nmt==0.3.8
-pickle5==0.0.11
-transformers==4.26.0
-networkx==3.0
-wget==3.2
-biotite==0.36.1
-torch==1.12.1
-scikit-learn==1.2.1
-matplotlib==3.6.3
-pandas=1.5.3
-tensorflow==2.11.0
-tensorboardX=2.5.1
+h5py==3.8.0
 biopython==1.80
-seaborn==0.12.1
+biotite==0.35.0
+brotlipy==0.7.0
+numpy==1.24.2
 obonet==0.3.1
-gemmi==0.5.8
+pandas==1.5.3
+pickle5==0.0.11
+Pillow==9.3.0
+scikit-learn==1.2.1
+scipy==1.10.1
+seaborn==0.12.2
+six==1.16.0
+subword-nmt==0.3.8
+tensorboard==2.11.2
+tensorboardX==2.5.1
+tensorflow==2.11.0
+tensorflow-estimator==2.11.0
 tfrecord==1.14.1
-torchvision=0.13.1
+tokenizers==0.13.2
+torch==1.13.1
+torchaudio==0.13.1
+torchvision==0.14.1
+tqdm==4.64.1
+transformers==4.26.0
+huggingface-hub==0.12.0
+matplotlib==3.6.3
+Werkzeug==2.2.2
+wget==3.2
+wrapt==1.14.1
+xgboost==1.7.3
+zipp==3.12.0
 lightgbm==3.3.5
 xgboost==1.7.3
-scipy==1.10.0
-Cartopy==0.21.1
 BeautifulSoup4==4.11.1
 requests==2.24.0
+gemmi==0.5.8
+networkx==3.0
+
